--- a/Class_12/Practical/Mysql/1.md
+++ b/Class_12/Practical/Mysql/1.md
@@ -1,21 +1,26 @@
 - ## Create A Student Table And Insert Data. Implement The Following SQL Commands On The Student Table:
    - ### ***mysql>*** CREATE TABLE class12(Name varchar(20) not null,FatherName varchar(20) not null,RollNo int not null,Class varchar(20) not null);
-   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('RATNESH KUMAR','KAMLESH PRASAD',12226,'12 SCIENCE');
-   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('PUSHPENDRA MEENA','RAMCHARAN MEENA',12223,'12 SCIENCE');
-   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('NIKHIL','AMLA',12218,'12 SCIENCE');
+   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('RAMA','DASARATHA',12226,'12 SCIENCE');
+   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('KRISHNA','VASUDEV',12220,'12 SCIENCE');
+   - ### ***mysql>*** INSERT INTO class12(Name,FatherName,RollNo,Class) VALUES ('LAKSHMAN','DASARATHA',12210,'12 SCIENCE');
    - ### ***mysql>*** SELECT *FROM class12;
+     - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
 - ## ALTER table to add new attributes / modify data type / drop attribute
      - ### ***mysql>*** ALTER TABLE class12 ADD Gender varchar(5);
      - ### ***mysql>*** SELECT *FROM class12;
-     - ### ***mysql>*** ALTER TABLE class12 MODIFY Gender varchar(5
+          - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
+     - ### ***mysql>*** ALTER TABLE class12 MODIFY Gender varchar(5)
      - ### ***mysql>*** SELECT *FROM class12;
+          - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
      - ### ***mysql>*** ALTER TABLE class12 DROP Gender;
      - ### ***mysql>*** SELECT *FROM class12;
+          - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
 - ## UPDATE table to modify data
-     - ### ***mysql>*** UPDATE class12 SET Gender='MALE' WHERE RollNo =12223;
+     - ### ***mysql>*** UPDATE class12 SET Gender='MALE' WHERE RollNo =12220;
      - ### ***mysql>*** UPDATE class12 SET Gender='MALE' WHERE RollNo =12226;
-     - ### ***mysql>*** UPDATE class12 SET Gender='MALE' WHERE RollNo =12218;
+     - ### ***mysql>*** UPDATE class12 SET Gender='MALE' WHERE RollNo =12210;
      - ### ***mysql>*** SELECT *FROM class12;
+          - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
 - ## ORDER By to display data in ascending / descending order 
      - ### ***mysql>*** SELECT *FROM class12 ORDER BY RollNo;
      - ### ***mysql>*** SELECT *FROM class12 ORDER BY RollNo DESC;
@@ -23,5 +28,6 @@
      - ### ***mysql>*** SELECT CLASS,COUNT(RollNo) FROM class12 GROUP BY CLASS;
      - ### ***mysql>*** SELECT MIN(RollNo),MAX(RollNo),AVG(RollNo),SUM(RollNo),COUNT(RollNo) FROM class12;
 - ## DELETE to remove tuple(s)
-     - ### ***mysql>*** DELETE FROM class12 WHERE RollNo=12218;
+     - ### ***mysql>*** DELETE FROM class12 WHERE RollNo=12210;
      - ### ***mysql>*** SELECT *FROM class12;
+          - **NOTE**: THIS CODE IS WRITTEN SIMPLY TO DISPLAY OUTPUT.
